<resources>
    <string name="app_name">WannaApp</string>
    <string name="note">"Note
        You can change information privacy later
        For your phone and birthdate"</string>
    <string name="Namedisplay">Name</string>
    <string name="phonedisplay">Phone</string>
    <string name="genderdisplay">Gender</string>
    <string name="Birthdaydisplay">Birthday</string>
    <string name="radiomale">Male</string>
    <string name="radiofemale">Female</string>
    <string name="privacy">Accept privacy terms and agrrements</string>
    <string name="registerbutton">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginwithemail">Login with your Gmail and password</string>
    <string name="loginbutton">Login</string>
    <string name="loginwithphone">Or Login with phone number</string>
    <string name="signupbutton">New here, SignUp</string>
    <string name="passwordhint">password</string>
    <string name="chooseloginmethod">Choose your Authentication method</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Gmail</string>
    <string name="phonenumberverfi">Phone Number Verification</string>
    <string name="verifyutton">Verify</string>
    <string name="sharebutton">sHARE</string>
</resources>
